--- a/aparan/Cargo.toml
+++ b/aparan/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio = { version = "1.19.1", features = ["full"] }
+aparan-macros = { path = "../aparan-macros" }
 
 [package.metadata.nix]
 build = true
